gccida/c3/set_value_regno
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/set_value_regno/src/regrename.c:1608:44: error: must use 'enum' tag to refer to type 'machine_mode'
void  set_value_regno( unsigned int regno, machine_mode mode,  struct value_data *vd) 
                                           ^
                                           enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/set_value_regno/src/regrename.c:1663:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[mode] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/set_value_regno/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/set_value_regno/src/regrename.c:1664:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v13 = mode_class_0[mode] == MODE_COMPLEX_FLOAT; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/set_value_regno/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/set_value_regno/src/obj/regrename.o] Error 1
